# xxt

Jni_Project2/: settings.gradle
Jni_Project2/app/: build.gradle
Jni_Project2/app/src/androidTest/java/com/baojie/learn/project_jni/: ExampleInstrumentedTest.kt
Jni_Project2/app/src/main/: AndroidManifest.xml
Jni_Project2/app/src/main/cpp/: CMakeLists.txt  DParcel.cpp  DParcel.h  Test.cpp  native-lib.cpp
Jni_Project2/app/src/main/java/com/baojie/learn/project_jni/: MainActivity.kt
Jni_Project2/app/src/main/res/layout/: activity_java_object.xml  activity_main.xml  activity_parcel.xml  activity_splash.xml
Jni_Project2/app/src/main/res/values/: themes.xml
Jni_Project2/app/src/main/res/values-night/: themes.xml
Jni_Project2/app/src/test/java/com/baojie/learn/project_jni/: ExampleUnitTest.kt
Jni_Project2/gradle/wrapper/: gradle-wrapper.properties
jni_project_video/: settings.gradle
jni_project_video/app/: build.gradle
jni_project_video/app/src/androidTest/java/com/baojie/learn/jni_project_video/: ExampleInstrumentedTest.kt
jni_project_video/app/src/main/: AndroidManifest.xml
jni_project_video/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
jni_project_video/app/src/main/java/com/baojie/learn/jni_project_video/: FastPlayer.kt  MainActivity.kt
jni_project_video/app/src/main/res/values/: strings.xml  themes.xml
jni_project_video/app/src/main/res/values-night/: themes.xml
jni_project_video/app/src/test/java/com/baojie/learn/jni_project_video/: ExampleUnitTest.kt
jni_project_video/gradle/wrapper/: gradle-wrapper.properties
kotlinProject/: build.gradle
kotlinProject/app/: .gitignore  build.gradle
kotlinProject/app/src/androidTest/java/com/baojie/kotlinproject/: ExampleInstrumentedTest.kt
kotlinProject/app/src/main/: AndroidManifest.xml
kotlinProject/app/src/main/java/com/baojie/kotlinproject/: MainActivity.kt  MyApplication.kt
kotlinProject/app/src/main/java/com/baojie/kotlinproject/adapter/: CollectAdapter.kt
kotlinProject/app/src/main/java/com/baojie/kotlinproject/api/: WanAndroidAPI.kt
kotlinProject/app/src/main/java/com/baojie/kotlinproject/base/: BaseActivity.kt  (+3 more)
kotlinProject/app/src/main/res/layout/: activity_main.xml
kotlinProject/app/src/main/res/menu/: bottom_nav_menu.xml  personal_menu.xml
kotlinProject/app/src/main/res/navigation/: mobile_navigation.xml
kotlinProject/app/src/main/res/values/: colors.xml  strings.xml
kotlinProject/app/src/test/java/com/baojie/kotlinproject/: ExampleUnitTest.kt
kotlinProject/gradle/wrapper/: gradle-wrapper.properties
(+34 files in other folders)
